--- a/zrpc-client/pom.xml
+++ b/zrpc-client/pom.xml
@@ -3,13 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>com.github.zrpc</artifactId>
+        <artifactId>zrpc</artifactId>
         <groupId>com.github</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>com.github.zrpc-client</artifactId>
+    <artifactId>zrpc-client</artifactId>
 
     <dependencies>
         <dependency>
