--- a/zrpc-client/pom.xml
+++ b/zrpc-client/pom.xml
@@ -17,5 +17,18 @@
             <artifactId>netty-all</artifactId>
             <version>4.1.44.Final</version>
         </dependency>
+        <dependency>
+            <groupId>com.github</groupId>
+            <artifactId>zrpc-protocol</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.github</groupId>
+            <artifactId>zrpc-codec</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+
     </dependencies>
 </project>
