--- a/zrpc-proxy/pom.xml
+++ b/zrpc-proxy/pom.xml
@@ -12,10 +12,23 @@
     <artifactId>zrpc-proxy</artifactId>
 
     <dependencies>
+
+        <dependency>
+            <groupId>com.github</groupId>
+            <artifactId>zrpc-protocol</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
         <dependency>
             <groupId>cglib</groupId>
             <artifactId>cglib</artifactId>
             <version>3.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github</groupId>
+            <artifactId>zrpc-client</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
